--- a/JVM-JarLoader.vcxproj
+++ b/JVM-JarLoader.vcxproj
@@ -145,13 +145,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ClassLoader.cpp" />
     <ClCompile Include="JVM-JarLoader.cpp" />
     <ClCompile Include="Loader.cpp" />
     <ClCompile Include="LoaderUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ClassLoader.h" />
     <ClInclude Include="Loader.h" />
     <ClInclude Include="LoaderUtils.h" />
+    <ClInclude Include="Resources.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
